# stm32_template

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile_simple  README.md  arm-none-eabi-toolchain.cmake  clang-toolchain.cmake  compile_commands.json  debug.lua  gdb_script  lpc111x.cmake  main.c  printf.cmake  stm32f4.cmake  tsrb.cmake
